--- a/package.json
+++ b/package.json
@@ -2,17 +2,36 @@
   "name": "governo-aberto",
   "version": "0.1.0",
   "private": true,
+  "test": "jest",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/test-utils": "^1.1.4",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-labels": "^1.1.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-2-breadcrumbs": "^0.8.0",
+    "vue-chartjs": "^3.5.1",
+    "vue-gtag": "^1.14.0",
+    "vue-multiselect": "^2.1.6",
+    "vue-router": "^3.2.0",
+    "vue-router-back-button": "^1.3.0",
+    "vue-select": "^3.11.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
