--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "vue-2-breadcrumbs": "^0.8.0",
     "vue-chartjs": "^3.5.1",
     "vue-gtag": "^1.14.0",
-    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.2.0",
     "vue-router-back-button": "^1.3.0",
-    "vue-select": "^3.11.2"
+    "vue-search-select": "^2.9.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
