--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-gtag": "^1.14.0",
     "vue-router": "^3.2.0",
     "vue-router-back-button": "^1.3.0",
-    "vue-search-select": "^2.9.3"
+    "vue-search-select": "^2.9.3",
+    "vue-social-sharing": "^3.0.7"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
