--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@vue/cli-plugin-unit-jest": "^4.5.12",
-    "@vue/test-utils": "^1.1.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
@@ -22,11 +20,9 @@
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-2-breadcrumbs": "^0.8.0",
     "vue-chartjs": "^3.5.1",
     "vue-gtag": "^1.14.0",
     "vue-router": "^3.2.0",
-    "vue-router-back-button": "^1.3.0",
     "vue-search-select": "^2.9.3",
     "vue-social-sharing": "^3.0.7"
   },
@@ -36,10 +32,14 @@
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/test-utils": "^1.1.4",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "prerender-spa-plugin": "^3.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-prerender-spa": "~1.1.6",
     "vue-cli-plugin-sitemap": "~2.3.0",
     "vue-template-compiler": "^2.6.11"
   },
