--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "^4.5.12",
+    "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.1.4",
+    "cypress": "^7.1.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
