--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
+    "axios-cache-adapter": "^2.7.3",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "chartjs-plugin-labels": "^1.1.0",
