--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "axios-cache-adapter": "^2.7.3",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
-    "chartjs-plugin-labels": "^1.1.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-gtag": "^1.14.0",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-router": "^3.2.0",
     "vue-search-select": "^2.9.3",
     "vue-social-sharing": "^3.0.7"
