--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@master
-      - uses: actions/setup-node@master
-
+      - name: vue
+        uses: actions/setup-node@master
       - run: npm install
       - run: npm run build
 
